# poc-zero-knowledge-password-manager

./: Anonymous_Voting_Ideas.md  Proof_of_Concept.md  README.md
backend_rust/: Cargo.toml
backend_rust/src/: main.rs  password_creation.rs  password_manager_http.rs  password_verification.rs
frontend_sol_react/: hardhat.config.js  package-lock.json  package.json
frontend_sol_react/contracts/: UsersPublicHashes.sol
frontend_sol_react/scripts/: initial-deploy.js
frontend_sol_react/src/: App.js
frontend_sol_react/src/utils/: UsersPublicHashes.json
