[package]
name = "zero-knowledge-password-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = { version = "^0.3.0", default-features = false }
ark-ec = { version = "^0.3.0", default-features = false }
ark-ed-on-bls12-381 = { version = "^0.3.0", features = ["r1cs"] }
ark-bls12-381 = { version = "^0.3.0" }
ark-std = { version = "^0.3.0", default-features = false }
ark-relations = { version = "^0.3.0", default-features = false, optional = true }

ark-r1cs-std = { version = "^0.3.0", optional = true, default-features = false }
ark-snark = { version = "^0.3.0", default-features = false }
ark-groth16 = { version = "^0.3.0" }
ark-gm17 = { version = "^0.3.0" }

ark-serialize = { version = "^0.3.0", default-features = false }

ark-crypto-primitives = { version = "^0.3.0", default-features = true }
blake2 = { version = "0.9" }
digest = "0.9"
tracing = { version = "0.1", default-features = false, features = [ "attributes" ] }
tracing-subscriber = { version = "0.2" }
derivative = { version = "2.0", features = ["use_core"] }

rand = { version = "^0.8.5"}

num-bigint = "^0.4.3"
num-traits = "^0.2.15"
actix-web = "^4.2.1"
serde = { version = "^1.0.147", features = ["derive"] }
serde_json = "^1.0.87"
actix-cors = "^0.6.4"

[features]
default = [ "std", "parallel", "r1cs" ]
std = [ "ark-ff/std", "ark-ec/std", "ark-std/std", "ark-relations/std", "ark-serialize/std", "ark-crypto-primitives/std" ]
r1cs = [ "ark-relations", "ark-r1cs-std", "ark-crypto-primitives/r1cs" ]
parallel = [ "std", "ark-ff/parallel", "ark-ec/parallel", "ark-std/parallel" ]